--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
+	<script src='https://d3js.org/d3.v5.min.js'></script>
+	<style> rect {fill: lightblue; stroke: black; }</style>
 	<head>
 		<title>USDA SNAP Benefits Issuance</title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
-	<body>
+	<body onload='init()'>
+		<svg width=850 height=450></svg>
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
@@ -19,6 +22,39 @@
         		<h1>USDA SNAP Benefit Issuance Summary</h1>
 				
     		</div><!-- /.blurb -->
+		<div>
+			<script>
+			async function init() {
+			//function init() {
+			const data = await d3.csv("https://github.com/bipinkarnati/bipinkarnati.github.io/edit/master/USTotals.csv");
+			//var data = d3.csv("USTotals.csv", function(err, data){
+
+			var xs = d3.scaleBand().domain([2000,2001,2002,2003,2004,2005,2006,2007,2008,2009,2010,2011,2012,2013,2014,2015,2016,2017,2018,2019]).range([0,800])
+			var ys = d3.scaleLinear().domain([0,50]).range([400,0])
+			var hs = d3.scaleLinear().domain([0,50]).range([0,400])
+			d3.select("svg")
+			.attr("width",850)
+			.attr("height",420)
+			.append("g")
+			.attr("transform","translate(" + 50 + "," + 50 +")")
+			.selectAll()
+			.data(data)
+			.enter()
+			.append('rect')
+			.attr('x',function(d,i) {return xs(parseInt(d.Year));})
+			.attr('y',function(d,i) {return ys(parseInt(d.MPersons));})
+			.attr('h',function(d,i) {return hs(parseInt(d.MPersons));});
+			d3.select("svg")
+			.append("g")
+			.attr("transform","translate("+50+","+50+")")
+			.call(d3.axisLeft(ys).tickValues([10,20,30,40,50])
+			.tickFormat(d3.format("~s")));
+			d3.select("svg")
+			.append("g")
+			.attr("transform","translate("+50+","+400+")")
+			.call(d3.axisBottom(xs));
+			}	
+		</div>
 		</div><!-- /.container -->
 		<footer>
     		<ul>
