--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
 			<script>
 			async function init() {
 			//function init() {
-			const data = await d3.csv("https://github.com/bipinkarnati/bipinkarnati.github.io/edit/master/USTotals.csv");
+			const data = await d3.csv("https://github.com/bipinkarnati/bipinkarnati.github.io/blob/master/USTotals.csv");
 			//var data = d3.csv("USTotals.csv", function(err, data){
+			console.log(data)
 
 			var xs = d3.scaleBand().domain([2000,2001,2002,2003,2004,2005,2006,2007,2008,2009,2010,2011,2012,2013,2014,2015,2016,2017,2018,2019]).range([0,800])
 			var ys = d3.scaleLinear().domain([0,50]).range([400,0])
