--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
-	<body onload='init()'>
+	<body onload='init()';>
 		<svg width=850 height=450></svg>
 		<nav>
     		<ul>
