--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
 			.append("g")
 			.attr("transform","translate("+50+","+400+")")
 			.call(d3.axisBottom(xs));
-			}	
+			}
+			</script>
 		</div>
 		</div><!-- /.container -->
 		<footer>
