--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<script>
 			async function init() {
 			//function init() {
-			const data = await d3.csv("https://github.com/bipinkarnati/bipinkarnati.github.io/blob/master/USTotals.csv");
+			const data = await d3.csv("https://raw.githubusercontent.com/bipinkarnati/bipinkarnati.github.io/master/USTotals.csv");
 			//var data = d3.csv("USTotals.csv", function(err, data){
 			console.log(data)
 
