--- a/index.html
+++ b/index.html
@@ -33,11 +33,14 @@
 			var xs = d3.scaleBand().domain([2000,2001,2002,2003,2004,2005,2006,2007,2008,2009,2010,2011,2012,2013,2014,2015,2016,2017,2018,2019]).range([0,800])
 			var ys = d3.scaleLinear().domain([0,50]).range([400,0])
 			var hs = d3.scaleLinear().domain([0,50]).range([0,400])
+			height = 400
+			width = 850
+			margin = 50
 			d3.select("svg")
-			.attr("width",850)
-			.attr("height",420)
+			.attr("width", width + 2*margin)
+			.attr("height",height + 2*margin)
 			.append("g")
-			.attr("transform","translate(" + 50 + "," + 50 +")")
+			.attr("transform","translate(" + margin + "," + margin +")")
 			.selectAll()
 			.data(data)
 			.enter()
@@ -47,13 +50,17 @@
 			.attr('width',33.3333)
 			.attr('height',function(d,i) {return hs(parseInt(d.MPersons));});
 			d3.select("svg")
+			.attr("width", width + 2*margin)
+			.attr("height",height + 2*margin)
 			.append("g")
 			.attr("transform","translate("+50+","+50+")")
 			.call(d3.axisLeft(ys).tickValues([10,20,30,40,50])
 			.tickFormat(d3.format("~s")));
 			d3.select("svg")
+			.attr("width", width + 2*margin)
+			.attr("height",height + 2*margin)
 			.append("g")
-			.attr("transform","translate("+50+","+400+")")
+			.attr("transform","translate("+ margin +","+ (height + margin)+")")
 			.call(d3.axisBottom(xs));
 			}
 			</script>
