--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 		<div class="blurb">
-        		<h1>USDA SNAP Benefit Issuance Summary</h1>
+        		<h2>USDA SNAP Benefit Issuance Summary</h2>
 				
     		</div><!-- /.blurb -->
 	</head>
@@ -20,7 +20,7 @@
 		</nav>
 		<div class="container">
     		
-		<svg width=850 height=450></svg>		
+		<svg width=800 height=500></svg>		
 		
 			<script>
 			async function init() {
@@ -61,6 +61,16 @@
 			.append("g")
 			.attr("transform","translate("+ margin +","+ (height + margin)+")")
 			.call(d3.axisBottom(xs));
+			d3.select("svg")
+			.attr("width", width + 2*margin)
+			.attr("height",height + 2*margin)
+			.append("text")
+			.attr("tranform","rotate(-90)")
+			.attr("y", 0-margin)
+			.attr("x", 0 - (height / 2))
+			.attr("dy","1em")
+			.style("text-anchor","middle")
+			.text("Number of Persons (in millinos)")
 			}
 			</script>
 		
