--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 			.attr("height",height + 2*margin)
 			.append("text")
 			.attr("tranform","rotate(-90)")
-			.attr("y", 0-margin)
+			.attr("y", 0-(margin/2))
 			.attr("x", 0 - (height / 2))
 			.attr("dy","1em")
 			.style("text-anchor","middle")
