--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 			.attr("transform","translate("+ margin +","+ (height + margin)+")")
 			.call(d3.axisBottom(xs));
 			d3.select("svg")
-			.attr("width", width + 2*margin)
-			.attr("height",height + 2*margin)
+			.attr("width", width + margin)
+			.attr("height",height + margin)
 			.append("text")
 			.attr("tranform","rotate(-90)")
 			.attr("y", 0-(margin/2))
