--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 			.attr("transform","translate("+ margin +","+ (height + margin)+")")
 			.append("text")
 			.attr("tranform","rotate(-90)")
-			.attr("y", 0-(margin/2))
+			.attr("y", 0-(margin))
 			.attr("x", 0 - (height / 2))
 			.attr("dy","1em")
 			.style("text-anchor","middle")
