--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	        	<li><a href="/about">About</a></li>
     		</ul>
 		</nav>
-		<div class="container">
+		//<div class="container">
     		
 		<svg width=800 height=500></svg>		
 		
@@ -76,7 +76,7 @@
 			}
 			</script>
 		
-		</div><!-- /.container -->
+		//</div><!-- /.container -->
 		<footer>
     		<ul>
         		
