--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 			.attr("width", width + 2*margin)
 			.attr("height",height + 2*margin)
 			.append("g")
-			.attr("transform","translate("+ margin +","+ (height + margin)+")")
+			.attr("transform","translate("+ margin +","+ margin +")")
 			.append("text")
 			.attr("tranform","rotate(-90)")
 			.attr("y", 0-(margin))
