--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
 			.attr("x", 0 - (height / 2))
 			.attr("dy","1em")
 			.style("text-anchor","middle")
-			.style("font-size","12px Arial")
+			.style("font-size","12px")
 			.text("Number of Persons (in millinos)");
 				
 				//x label
 			svg.append("text")
 			.attr("transform","translate(" + width / 2 + "," + (height + margin.top) + ")")
 			.style("text-anchor","middle")
-			.style("font-size","12px Arial")
+			.style("font-size","12px")
 			.text("Year");			
 			}
 			</script>
