--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 				
 				//y label
 			svg1.append("text")
-			.attr("tranform","rotate(-90)")
+			.attr("transform","rotate(-90)")
 			.attr("y", 0 - (margin.left))
 			.attr("x", 0 - (height / 2))
 			.attr("dy","1em")
