--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
 			.attr("y", 0 - (margin.left))
 			.attr("x", 0 - (height / 2))
 			.attr("dy","1em")
-			.style("text-anchor","middle")
-			.text("Number of Persons (in millinos)");
+			.style("text-anchor","middle";"font-size","12px";"font-family","sans-serif"))
+			.text("Number of Persons (in Millinos)");
 				
 				//x label
 			svg1.append("text")
 			.attr("transform","translate(" + width / 2 + "," + (height + margin.top) + ")")
-			.style("text-anchor","middle")
+			.style("text-anchor","middle";"font-size","12px";"font-family","sans-serif")
 			.text("Year");			
 			}
 			</script>
