--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<script src='https://d3js.org/d3.v5.min.js'></script>
-	<style> rect {fill: lightblue; stroke: black; }</style>
+	<style> rect {fill: #29B6F6; stroke: black; }</style>
 	<head>
 		<title>USDA SNAP Benefits Issuance</title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 		<div class="blurb">
-        		<h2>USDA SNAP Benefit Issuance Summary</h2>
+        		<h1>USDA Food and Nutrition Service Benefit Issuance Summary</h1>
 				
     		</div><!-- /.blurb -->
 	</head>
