--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<script src='https://d3js.org/d3.v5.min.js'></script>
-	<style> rect {fill: #29B6F6; stroke: black; }</style>
+	<style> rect {fill: #DCEDC8; stroke: black; }</style>
 	<head>
 		<title>USDA SNAP Benefits Issuance</title>
 		<!-- link to main stylesheet -->
