--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 			
 				// y axis
 			svg1.append("g")
-			.call(d3.axisLeft(ys).tickValues([10M,20M,30M,40M,50M])
+			.call(d3.axisLeft(ys).tickValues(["10M","20M","30M","40M","50M"])
 			.tickFormat(d3.format("~s")));
 				
 				//x axis
