--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@
 		
 		<footer>
     		<ul>
-        		
+        		<p>
+				<b>Desclaimer:</b> This site is build for learning purpose only.
+			</p>
 		</ul>
 		</footer>
 	</body>
