--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         		<h2>US Food and Nutrition Service Beneficiaries - Factors Influenced</h2>				
     		</div>
 	</head>
-	<body onload='init()'>
-		<div class='intro">
+	<body onload='init()';>
+		<div class="intro">
 			    <p>
 			    	In the United States, the Supplemental Nutrition Assistance Program (SNAP), formerly yet still commonly known as the Food Stamp Program, 
 			    	is a federal program that provides food-purchasing assistance for low and no-income people. It is a federal aid program, administered by 
