--- a/index.html
+++ b/index.html
@@ -7,8 +7,17 @@
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 		<div class="header">
-        		<h2>US Food and Nutrition Service Beneficiaries - Factors Influenced</h2>				
+        		<h2>Number of People Assisted by US Food and Nutrition Service Program SNAP</h2>				
     		</div>
+		<div class="pages">
+			<nav>
+    			<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/regions">Beneficiaries By Regions</a></li>
+			<li><a href="/states">Beneficiaries By State</a></li>
+    			</ul>
+			</nav>   
+		</div>
 	</head>
 	<body onload='init()';>
 		<div class="intro">
@@ -16,17 +25,12 @@
 			    	In the United States, the Supplemental Nutrition Assistance Program (SNAP), formerly yet still commonly known as the Food Stamp Program, 
 			    	is a federal program that provides food-purchasing assistance for low and no-income people. It is a federal aid program, administered by 
 			    	the United States Department of Agriculture under the Food and Nutrition Service (FNS), though benefits are distributed by specific departments 
-			    	of U.S. states.
+			    	of U.S. states.<br>
 			    	Source: <li><a href="https://en.wikipedia.org/wiki/Supplemental_Nutrition_Assistance_Program">Wikipedia/SNAP</a></li>
 			    		<li><a href="https://www.fns.usda.gov/pd/supplemental-nutrition-assistance-program-snap">USDA-FNS</a></li>
 			    </p>
 		</div>		 
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/regions">Beneficiaries By Regions</a></li>
-    		</ul>
-		</nav>    		
+			
 		<svg width=800 height=500></svg>		
 			<script>
 			async function init() {
