--- a/regions.html
+++ b/regions.html
@@ -76,7 +76,7 @@
 			.enter()
 			.append("path")
 			.attr("fill","none")
-			.attr("stroke", function(d, i) {return color(i)})
+			.attr("stroke", function(d, i) {return color[i]})
 			.attr("stroke-width", 2.0)
 			.attr("d", line)
 			/*.attr('x',function(d,i) {return xs(parseInt(d.Year));})
