--- a/regions.html
+++ b/regions.html
@@ -31,7 +31,7 @@
 	</head>
 	<body onload='init()';>
 		<div id="byregions" class="svgregions" align="center"></div>			
-		<svg width=800 height=500></svg>
+		/*<svg width=800 height=500></svg>*/
 			<script>
 			async function init() {
 			//function init() {
