--- a/states.html
+++ b/states.html
@@ -23,16 +23,20 @@
 				In the United States, the Supplemental Nutrition Assistance Program (SNAP), formerly yet still commonly known as the Food Stamp Program, 
 				is a federal program that provides food-purchasing assistance for low and no-income people. It is a federal aid program, administered by 
 				the United States Department of Agriculture under the Food and Nutrition Service (FNS), though benefits are distributed by specific departments 
-				of U.S. states.<br>
-				Source: <li><a href="https://en.wikipedia.org/wiki/Supplemental_Nutrition_Assistance_Program">Wikipedia/SNAP</a></li>
-					<li><a href="https://www.fns.usda.gov/pd/supplemental-nutrition-assistance-program-snap">USDA-FNS</a></li>
+				of U.S. states.				
 			</p>
 		</div>
 	</head>
 	<body onload='init()';>
+		<div id="dropdown" class="states">
+			<select>
+				<option class="options" value="default">Alabama</option>
+			</select>	
+		</div>
 		<div id="byregions" class="svgregions" align="center"></div>			
 		/*<svg width=800 height=500></svg>*/
 			<script>
+
 			async function init() {
 			//function init() {
 			const data = await d3.csv("https://raw.githubusercontent.com/bipinkarnati/bipinkarnati.github.io/master/USTotals.csv");
@@ -45,7 +49,25 @@
 				d.CostPerPerson = +d.CostPerPerson;
 				d.MPersons = +d.MPersons;
 				d.State = d.State;
-			});				
+			});	
+			// get list of states from data for dropdown
+			const stateData = data.filter(function(d) {return d && d.State != "US" 
+																	&& d.State != "NERO"
+																	&& d.State != "MARO"
+																	&& d.State != "SERO"
+																	&& d.State != "MWRO"
+																	&& d.State != "SWRO"
+																	&& d.State != "MPRO"
+																	&& d.State != "WRO"})
+			//Append options to the dropdown
+			console.log(stateData)
+			d3.selectAll("#options")
+			.data(d3.map(stateData, function(d) {return d.State}).keys())
+			.enter()
+			.append("option")
+			.attr("value", function(d) {return d})
+			.text(function(d) {return d});
+
 			var state = "US"
 			console.log(data)
 			var xs = d3.scaleBand().domain(data.map(function (d) {return d.Year})).range([0,700])
@@ -78,7 +100,7 @@
 
 			// draw line chart
 			svg1.selectAll(".line")
-			.data(region_data)
+			.data(state_data)
 			.enter()
 			.append("path")
 			.attr("fill","none")
@@ -120,6 +142,10 @@
 			</script>		
 		<footer>
     		<ul>
+				<p>
+					Source: <li><a href="https://en.wikipedia.org/wiki/Supplemental_Nutrition_Assistance_Program">Wikipedia/SNAP</a></li>
+					<li><a href="https://www.fns.usda.gov/pd/supplemental-nutrition-assistance-program-snap">USDA-FNS</a></li>
+				</p>
         		<p>
 					<b>Desclaimer:</b> This site is built for learning purpose only.
 				</p>
