--- a/states.html
+++ b/states.html
@@ -30,7 +30,6 @@
 	<body onload='init()';>
 		<div id="dropdown" class="states">
 			<select class="options">
-				<option></option>
 			</select>	
 		</div>
 		<div id="byregions" class="svgregions" align="center"></div>
@@ -59,7 +58,7 @@
 																	&& d.State != "WRO"})
 			//Append options to the dropdown
 			console.log(stateData)
-			d3.select("div#dropdown").selectAll("option")
+			d3.select("select#options").selectAll()
 			.data(d3.map(stateData, function(d) {return d.State}).keys())
 			.enter()
 			.append("option")
