--- a/states.html
+++ b/states.html
@@ -29,7 +29,7 @@
 	</head>
 	<body onload='init()';>
 		<div id="dropdown" class="states">
-			<select class="options">
+			<select id="options">
 			</select>	
 		</div>
 		<div id="byregions" class="svgregions" align="center"></div>
@@ -58,7 +58,7 @@
 																	&& d.State != "WRO"})
 			//Append options to the dropdown
 			console.log(stateData)
-			d3.select("div#dropdown").select("select")
+			d3.select("div#dropdown").select("options")
 			.data(d3.map(stateData, function(d) {return d.State}).keys())
 			.enter()
 			.append("option")
