--- a/states.html
+++ b/states.html
@@ -91,12 +91,12 @@
 								 data.filter(function(d) {return d.State == "WRO"})]
 			console.log(region_data)
 			
+			drawChart(stateData,svg1)		
+			}
+			function drawChart(stateData,svg1){
 			const line = d3.line()
 			.x(function(d) {return xs(d.Year)})
 			.y(function(d) {return ys(d.MPersons)});
-			drawChart(stateData)		
-			}
-			function drawChart(stateData){
 				// draw line chart
 			svg1.selectAll(".line")
 			.data(state_data)
