--- a/states.html
+++ b/states.html
@@ -66,7 +66,23 @@
 			.text(function(d) {return d});
 
 			var state = "Alabama"
-			console.log(data)
+			console.log(data)		
+				
+				//chart data
+			const state_data = data.filter(function(d) {return d.State == state});
+			const region_data = [data.filter(function(d) {return d.State == "NERO"}),
+								 data.filter(function(d) {return d.State == "MARO"}),
+								 data.filter(function(d) {return d.State == "SERO"}),
+								 data.filter(function(d) {return d.State == "MWRO"}),
+								 data.filter(function(d) {return d.State == "SWRO"}),
+								 data.filter(function(d) {return d.State == "MPRO"}),
+								 data.filter(function(d) {return d.State == "WRO"})]
+			//console.log(region_data)
+			
+			drawChart(state_data,svg1)		
+			}
+			function drawChart(state_data,svg1){
+
 			var xs = d3.scaleBand().domain(data.map(function (d) {return d.Year})).range([0,700])
 			var ys = d3.scaleLinear().domain([0,13]).range([400,0])
 			//var hs = d3.scaleLinear().domain([0,50]).range([0,400])
@@ -79,21 +95,6 @@
 				.attr("height",height + margin.top + margin.bottom)
 				.append("g")
 				.attr("transform","translate(" + margin.left + "," + margin.top +")");
-				
-				//chart data
-			const state_data = data.filter(function(d) {return d.State == state});
-			const region_data = [data.filter(function(d) {return d.State == "NERO"}),
-								 data.filter(function(d) {return d.State == "MARO"}),
-								 data.filter(function(d) {return d.State == "SERO"}),
-								 data.filter(function(d) {return d.State == "MWRO"}),
-								 data.filter(function(d) {return d.State == "SWRO"}),
-								 data.filter(function(d) {return d.State == "MPRO"}),
-								 data.filter(function(d) {return d.State == "WRO"})]
-			console.log(region_data)
-			
-			drawChart(state_data,svg1)		
-			}
-			function drawChart(state_data,svg1){
 			const line = d3.line()
 			.x(function(d) {return xs(d.Year)})
 			.y(function(d) {return ys(d.MPersons)});
