--- a/states.html
+++ b/states.html
@@ -116,7 +116,7 @@
 				//x axis
 			svg1.append("g")
 			.attr("transform","translate("+ 0 +","+ (height + 0)+")")
-			.call(d3.axisBottom(xs).tickFormat(d3.format("~s")));
+			.call(d3.axisBottom(xs));
 				
 				//y label
 			svg1.append("text")
