--- a/states.html
+++ b/states.html
@@ -66,7 +66,7 @@
 			.text(function(d) {return d});
 
 			var state = "Alabama"
-			console.log(data)		
+			//console.log(data)		
 				
 				//chart data
 			const state_data = data.filter(function(d) {return d.State == state});
