--- a/states.html
+++ b/states.html
@@ -99,10 +99,8 @@
 			.x(function(d) {return xs(d.Year)})
 			.y(function(d) {return ys(d.MPersons)});
 				// draw line chart
-			svg1.selectAll(".line")
-			.data(state_data)
-			.enter()
-			.append("path")
+			svg1.append("path")
+			.datum(state_data)
 			.attr("fill","none")
 			.attr("stroke", function(d, i) {return color[1]})
 			.attr("stroke-width", 2.0)
