--- a/states.html
+++ b/states.html
@@ -109,8 +109,8 @@
 			
 				// y axis
 			svg1.append("g")
-			.call(d3.axisLeft(ys)
-			.tickFormat(d3.format("~s")));
+			.call(d3.axisLeft(ys));
+			//.tickFormat(d3.format("~s")));
 				
 				//x axis
 			svg1.append("g")
